Importação do dataset e criação de DB

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "powershell"
@@ -21,21 +21,12 @@
      "output_type": "stream",
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not find a version that satisfies the requirement sqlite3 (from versions: none)\n",
-      "ERROR: No matching distribution found for sqlite3\n"
      ]
     }
    ],
    "source": [
-    "%pip install pandas  -q\n",
+    "%pip install pandas -q\n",
     "%pip install matplotlib -q"
    ]
   },
@@ -43,19 +34,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importação do Dataset"
+    "## Carregamento das dependências"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importação do dataset e criação de DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_csv('https://raw.githubusercontent.com/LSouzaAndrade/TechChallenge3/refs/heads/main/Datasets/StudentPerformanceFactors.csv')\n",
+    "conn = sqlite3.connect('./Datasets/StudentPerformanceFactor.db')\n",
+    "dataset.to_sql('StudentData', conn, if_exists='replace', index=False)\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
