:sparkles: inicio das analises

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -20,8 +20,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.0.1 -> 24.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.0.1 -> 24.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -57,15 +81,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('https://raw.githubusercontent.com/LSouzaAndrade/TechChallenge3/refs/heads/main/Datasets/StudentPerformanceFactors.csv')\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/LSouzaAndrade/TechChallenge3/refs/heads/main/Datasets/StudentPerformanceFactors.csv')\n",
     "conn = sqlite3.connect('./Datasets/StudentPerformanceFactors.db')\n",
-    "dataset.to_sql('StudentData', conn, if_exists='replace', index=False)\n",
-    "conn.close()"
+    "# dataset.to_sql('StudentData', conn, if_exists='replace', index=False)\n",
+    "# conn.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6607, 20)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Features com valores unicos\n",
+    "Verificando a existência de features com valores únicos (devem ser dropadas por não contribuirem para a explicar a variação da feature target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Extracurricular_Activities     2\n",
+       "Internet_Access                2\n",
+       "Gender                         2\n",
+       "School_Type                    2\n",
+       "Learning_Disabilities          2\n",
+       "Distance_from_Home             3\n",
+       "Parental_Involvement           3\n",
+       "Access_to_Resources            3\n",
+       "Parental_Education_Level       3\n",
+       "Motivation_Level               3\n",
+       "Family_Income                  3\n",
+       "Teacher_Quality                3\n",
+       "Peer_Influence                 3\n",
+       "Sleep_Hours                    7\n",
+       "Physical_Activity              7\n",
+       "Tutoring_Sessions              9\n",
+       "Hours_Studied                 41\n",
+       "Attendance                    41\n",
+       "Exam_Score                    45\n",
+       "Previous_Scores               51\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.nunique().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NaN Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hours_Studied                  0\n",
+       "Attendance                     0\n",
+       "Parental_Involvement           0\n",
+       "Access_to_Resources            0\n",
+       "Extracurricular_Activities     0\n",
+       "Sleep_Hours                    0\n",
+       "Previous_Scores                0\n",
+       "Motivation_Level               0\n",
+       "Internet_Access                0\n",
+       "Tutoring_Sessions              0\n",
+       "Family_Income                  0\n",
+       "Teacher_Quality               78\n",
+       "School_Type                    0\n",
+       "Peer_Influence                 0\n",
+       "Physical_Activity              0\n",
+       "Learning_Disabilities          0\n",
+       "Parental_Education_Level      90\n",
+       "Distance_from_Home            67\n",
+       "Gender                         0\n",
+       "Exam_Score                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -84,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
