finalização do notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3873,7 +3873,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 152,
       "metadata": {
         "id": "nS9zrzZa5R3p"
       },
@@ -3882,8 +3882,8 @@
         "\n",
         "# Definir os parâmetros a serem testados para o SVR\n",
         "\n",
-        "param_grid_svr = {'kernel': ['linear', 'poly', 'rbf', 'sigmoid'],\n",
-        "                  'C': [0.1, 1, 10, 100],\n",
+        "param_grid_svr = {'kernel': ['linear', 'rbf'],\n",
+        "                  'C': [0.1, 1, 10],\n",
         "                  'epsilon': [0.1, 0.2, 0.5],\n",
         "                  'gamma': ['scale', 'auto']\n",
         "                 }\n",
@@ -3905,11 +3905,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 153,
       "metadata": {
         "id": "UQ16wotu5R3q"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Melhores Parâmetros Encontrados:\n",
+            "SVR(C=10, epsilon=0.2, gamma='auto')\n"
+          ]
+        }
+      ],
       "source": [
         "# Exibir os melhores parâmetros encontrados\n",
         "print(\"Melhores Parâmetros Encontrados:\")\n",
@@ -3918,16 +3927,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 154,
       "metadata": {
         "id": "uLNhndke5R3q"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "MSE: 3.253761936718843\n",
+            "RMSE: 1.803818709493513\n",
+            "MAPE: 0.005560663086733738\n"
+          ]
+        }
+      ],
       "source": [
         "mse = mean_squared_error(y_test,y_pred, squared=True)\n",
         "rmse = np.sqrt(mse)\n",
         "mape = mean_absolute_percentage_error(y_test,y_pred)\n",
         "print(f'MSE: {mse}\\nRMSE: {rmse}\\nMAPE: {mape}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- MSE: 3.25. Indica que, em média, o quadrado da diferença entre o valor previsto e o valor real é de 3.25.  \n",
+        "- RMSE: 1.80. Sugere que, em média, o erro absoluto do modelo é de 1.80 unidades da sua variável alvo.  \n",
+        "- MAPE: 0.0055. Isso significa que, em média, o erro percentual do modelo é de 0.55%.  "
       ]
     },
     {
@@ -3941,11 +3969,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 155,
       "metadata": {
         "id": "tX9ErnJ85R3q"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[3.83219911 7.76266204 0.67853294 5.07584048 4.04891024 6.77806118\n",
+            " 5.84842276 6.82926008 1.80106258 3.46601075]\n",
+            "Média do erro quadrático médio com validação cruzada: 4.612096216725038\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.model_selection import cross_val_score\n",
         "\n",
@@ -3956,38 +3994,22 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "from sklearn.model_selection import cross_val_score\n",
-        "\n",
-        "scores = cross_val_score(model_lr, X_train, y_train, cv=10, scoring='neg_mean_squared_error')\n",
-        "\n",
-        "print(-scores)\n",
-        "print(\"Média do erro quadrático médio com validação cruzada:\", (-scores.mean()))"
+        "Média do MSE: 4.61. A média do MSE obtida pela validação cruzada é um pouco maior que o MSE obtido pelo GridSearchCV. Isso pode indicar que o modelo pode estar sofrendo um pouco de overfitting, ou seja, está se ajustando demais aos dados de treinamento e pode não generalizar bem para novos dados.  \n",
+        "Variância dos resultados: A grande variância nos valores de MSE obtidos pela validação cruzada indica que o modelo pode ser instável e sensível a pequenas mudanças nos dados de treinamento."
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 15,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'1.4.2'"
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
-        "import sklearn\n",
-        "sklearn.__version__"
+        "### Conclusão\n",
+        "\n",
+        "- Desempenho Geral: O modelo apresenta um bom desempenho, com um erro médio relativamente baixo.\n",
+        "- Overfitting: A diferença entre o MSE do GridSearchCV e a média do MSE na validação cruzada sugere que o modelo pode estar levemente overfittando os dados.\n",
+        "- Instabilidade: A alta variância nos resultados da validação cruzada indica que o modelo pode ser instável."
       ]
     },
     {
@@ -3999,7 +4021,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 156,
       "metadata": {
         "id": "wLJbn7NM5R3q",
         "outputId": "3147a018-80a4-4a0a-a640-26c1386a1f53"
@@ -4008,10 +4030,10 @@
         {
           "data": {
             "text/plain": [
-              "['model_lr_semnormalizar.pkl']"
+              "['.\\\\Models\\\\model_svr.pkl']"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 156,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -4019,7 +4041,7 @@
       "source": [
         "# joblib.dump(model_svr, 'model_svr.json')\n",
         "\n",
-        "joblib.dump(model_lr, 'model_lr_semnormalizar.pkl')\n"
+        "joblib.dump(best_svr, '.\\Models\\model_svr.pkl')\n"
       ]
     },
     {
